--- a/.env.example
+++ b/.env.example
@@ -24,5 +24,5 @@ COLLECTION_NAME=documents
 EMBEDDING_MODEL=all-MiniLM-L6-v2
 
 # LLM Configuration
-LLM_MODEL=gpt-3.5-turbo
+LLM_MODEL=gpt-4o
 LLM_TEMPERATURE=0.7
