--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
 # Cloud Storage
-boto3==1.34.34
-google-cloud-storage==2.14.0
-azure-storage-blob==12.19.0
+boto3==1.35.40
+google-cloud-storage==2.18.2
+azure-storage-blob==12.23.1
 
-# Vector Database
-chromadb==0.4.22
-sentence-transformers==2.3.1
+# Vector Database (4x performance improvement in v0.5+)
+chromadb==0.5.18
+sentence-transformers==3.3.1
 
 # Document Processing
-langchain==0.1.6
-langchain-community==0.0.19
-pypdf==4.0.1
-python-docx==1.1.0
-openpyxl==3.1.2
+langchain==0.3.7
+langchain-community==0.3.7
+pypdf==5.1.0
+python-docx==1.1.2
+openpyxl==3.1.5
 python-pptx==0.6.23
 
 # Embeddings & LLM
-openai==1.12.0
-tiktoken==0.5.2
+openai==1.58.1
+tiktoken==0.8.0
 
 # UI
-streamlit==1.31.0
+streamlit==1.40.1
 
 # Utils
 python-dotenv==1.0.1
-pydantic==2.6.1
-pydantic-settings==2.1.0
+pydantic==2.10.3
+pydantic-settings==2.7.0
